Fix OCSP and CRL connection timeout (#1085)